# yolov3-pytorch

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  coco_eval.py  cocoeval.py  pyproject.toml  requirements.txt  setup.cfg  train.py  train.sh  val.py  val_exp.py
.github/: CONTRIBUTING.md
.github/hooks/: commit-msg
.github/workflows/: ci.yml  lint-docs.yml  linter.yml  pylint.yml
configs/: hyp.scratch.yaml  yolov3-spp.yaml  yolov3.yaml
data/: coco.yaml  visdrone.yaml
nets/: __init__.py  common.py  yolov3.py  yolov3spp.py  yolov3tiny.py
src/models/: common.py  yolov3.py  yolov3spp.py  yolov3tiny.py
src/nets/: __init__.py  common.py  yolov3.py  yolov3spp.py  yolov3tiny.py
src/utils/: __init__.py  autoanchor.py  datasets.py  general.py  loss.py  metrics.py  plots.py  torch_utils.py
tools/: train.py  val.py
utils/: autoanchor.py  datasets.py  general.py  loss.py  metrics.py  misc.py  plots.py  torch_utils.py
yolov3/: __init__.py
yolov3/models/: __init__.py  common.py  yolov3.py  yolov3spp.py  yolov3tiny.py
yolov3/utils/: __init__.py  augmentations.py  dataset.py  datasets.py  general.py  loss.py  metrics.py  misc.py
