[project]
name = "project-template"
description = "Default repo template for ML/DL projects"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
version = "0.0.1"
authors = [
	{name = "Yakhyokhuja Valikhujaev", email = "yakhyo9696@gmail.com"}
]

[tool.isort]
line_length = 120
include_trailing_comma = true
src_paths = ["src"] # add folders to check

[tool.black]
line_length = 120
target-version = ['py38']
include = '''
		(
			^/src
		)
		'''
		
